--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -18,10 +18,7 @@
     <div class="header__inner">
 
       <a class="header__logo" href="#">
-        <svg class="header__logo-svg" width="40" height="40" viewBox="0 0 40 40" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" fill="#C4C4C4" />
-        </svg>
+        <img class="header__logo-svg" src="images/logo.svg" alt="logo">
       </a>
 
       <div class="header__redirection">
@@ -109,8 +106,11 @@
         </div>
 
         <button class="form__button" type="submit">
-          Sign in
+          Sign Up
+          <div class="form__loader">
+          </div>
         </button>
+
       </form>
 
       <p class="main__privacy-policy">
